[package]
name = "dtl"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_assertions = "1.4.1"
regex = "1.11.2"
serde_json = "1.0.143"
serde = { version = "1.0.143", features = ["derive"]}
num-bigint = { version = "0.4.6", features = ["serde"]}
chrono = "0.4.42"
base64 = "0.22.1"
bigdecimal = "0.4.8"

[patch.crates-io]
#serde_json = { path = "serde_json" }